@@ -3,10 +3,11 @@ from zope.component import getUtility
 from Products.CMFCore.utils import getToolByName
 from plone.registry.interfaces import IRegistry
 from collective.xmpp.core.interfaces import IXMPPSettings
+from twisted.words.protocols.jabber.jid import JID
 
 def getAllMemberIds():
-    """ Call searchUsers from PluggableAuthService, so that we get users from
-        PAS plugins as well (e.g LDAP).
+    """ Call searchUsers from PluggableAuthService, so that we get
+        users from PAS plugins as well (e.g LDAP)
     """
     portal = getSite()
     acl_users = getToolByName(portal, 'acl_users')
@@ -14,7 +15,7 @@ def getAllMemberIds():
 
 def escapeNode(node):
     """ Escape the node part (also called local part) of a JID.
-        See: http://xmpp.org/extensions/xep-0106.html#escaping 
+        See: http://xmpp.org/extensions/xep-0106.html#escaping
     """
     node.strip()
     node = node.replace('\\', "\\5c")
@@ -31,7 +32,7 @@ def escapeNode(node):
 
 def unescapeNode(node):
     """ Unescape the node part (also called local part) of a JID.
-        See: http://xmpp.org/extensions/xep-0106.html#escaping 
+        See: http://xmpp.org/extensions/xep-0106.html#escaping
     """
     node = node.replace("\\5c", '\\')
     node = node.replace("\\20", ' ')
@@ -45,18 +46,45 @@ def unescapeNode(node):
     node = node.replace("\\40", '@')
     return node
 
-def setupPrincipal(client,
-                   principal_jid, principal_password,
-                   roster_jids):
-    """Create a jabber account for a new user as well
-       as create and configure its associated nodes."""
+def setupPrincipal(client, principal_jid, principal_password):
+    """ Create a jabber account for a new user as well
+        as create and configure its associated nodes
+    """
     site = getSite()
 
     def subscribeToAllUsers(result):
         if result == False:
             return False
-        if roster_jids:
-            client.chat.sendRosterItemAddSuggestion(principal_jid, roster_jids, site)
+
+        def getUserJID(user_id):
+            settings = registry.forInterface(IXMPPSettings, check=False)
+            return JID("%s@%s" % (escapeNode(user_id), settings.xmpp_domain))
+
+        def resultReceived(result):
+            items = [item.attributes for item in result.query.children]
+            if items[0].has_key('node'):
+                for item in reversed(items):
+                    iq = IQ(client.admin.xmlstream, 'get')
+                    iq['to'] = client.admin.xmlstream.factory.authenticator.jid.host
+                    query = iq.addElement((NS_DISCO_ITEMS, 'query'))
+                    query['node'] = item['node']
+                    iq.send().addCallbacks(resultReceived)
+            else:
+                member_jids = [item['jid'] for item in items]
+                if settings.admin_jid in member_jids:
+                    member_jids.remove(settings.admin_jid)
+                if member_jids:
+                    roster_jids = [getUserJID(user_id.split('@')[0])
+                                     for user_id in member_jids]
+
+                    client.chat.sendRosterItemAddSuggestion(principal_jid,
+                                                            roster_jids,
+                                                            site)
+
+            return result
+
+        d = client.admin.getRegisteredUsers()
+        d.addCallbacks(resultReceived)
         return True
 
     d = client.admin.addUser(principal_jid.userhost(), principal_password)
@@ -70,7 +98,7 @@ def setupPrincipal(client,
 
 
 def deletePrincipal(client, principal_jid):
-    """Delete a jabber account as well as remove its associated nodes.
+    """ Delete a jabber account as well as remove its associated nodes
     """
     principal_id = principal_jid.user
     d = client.admin.deleteUsers(principal_jid.userhost())
